--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
             - name: Test
               run: |
                 ls
-                chmod a+w ./install_auto_fedora.sh
-                bash ./install_auto_fedora.sh
+                sudo chmod a+w install_auto_fedora.sh
+                bash install_auto_fedora.sh
